Migrate CalculateClassAbiStep to IsolatedSteps
Summary:
Buck could calculate class abi from the jar by invoking `CalculateClassAbiStep` that modified to be an IsolatedStep and then potentially could be executed outside of buck process `(1)`

`//src/com/facebook/buck/jvm/java/abi:api-stubber` is a java binary that is calculating class abi jar as well and could be executed with `buck run` command. `(2)`

Changes:
* CalculateClassAbiStep migrated to be an `IsolatedStep`
* `ApiStubber` no longer need to create `DefaultProjectFilesystemFactory` with some custom watchman error code

Reviewed By: cjhopman

fbshipit-source-id: 21ed929409be3a862953e705b1b956b9d8241f91